# zulip-write-only-proxy

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  Taskfile.yml  compose.override.yml  compose.prod.yml  compose.staging.yml  compose.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  tailwind.config.js
.github/bck/: lint.yml  test.yml
.github/setup/: action.yml
.github/workflows/: build-image.yml  deploy.yml  lint.yml  test.yml  tests.yml
config/: known_hosts
scripts/: generate-mtls.sh
src/deploy/: deployer.py
src/zulip_write_only_proxy/: __init__.py  _logging.py  _remote_receive.py  cli.py  exceptions.py  main.py  model.py  models.py  mymdc.py  repositories.py  repository.py  service.py  services.py  settings.py  zulip_client.py
src/zulip_write_only_proxy/frontend/: input.css  package.json  pnpm-lock.yaml  routes.py
src/zulip_write_only_proxy/frontend/static/: main.css
src/zulip_write_only_proxy/frontend/templates/: base.html  create.html  index.html  list.html  login.html  messages.html
src/zulip_write_only_proxy/frontend/templates/fragments/: alert-error.html  alert.html  auth-check.html  create-success.html  list-messages-rows.html  list-table-rows.html  navbar.html
src/zulip_write_only_proxy/models/: __init__.py  base.py  client.py  zulip.py
src/zulip_write_only_proxy/routers/: __init__.py  api.py  auth.py  frontend.py  mymdc.py
src/zwop/: main.py  repositories.py
src/zwop/frontend/templates/fragments/: create-success.html
src/zwop/routers/: auth.py  frontend.py  mymdc.py
tests/: conftest.py  test_fastapi.py  test_models.py  test_mymdc.py  test_repositories.py  test_services.py
