[project]
name = "zulip-write-only-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.6",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "orjson>=3.11.7",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.22",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
    "zulip>=0.9.1",
]

[tool.hatch.build.targets.sdist]
include = ["src/zulip_write_only_proxy"]

[tool.hatch.build.targets.wheel]
include = ["src/zulip_write_only_proxy"]

[tool.hatch.build.targets.wheel.sources]
"src/zulip_write_only_proxy" = "zulip_write_only_proxy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "vcrpy>=8.1.1",
]
